# rustdb

./: Cargo.toml  LICENSE  README.md  test.csv  test_data.csv
benches/: buf_vec_bench.rs
src/core/: database.rs  dtype.rs  errors.rs  interface.rs  lib.rs  relation.rs
src/db/: bin.rs
tests/: database_test.rs  join_test.rs  operator_test.rs  relation_test.rs
