[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
criterion = "0.5.1"
csv = "1"
log = "0.4"
env_logger = "0.11.3"
tempfile = "3.10.1"
rayon = "1.10.0"
dashmap = "6.1.0"

[lib]
name = "rustdb"
path = "src/core/lib.rs"

[[bin]]
name = "rustdb"
path = "src/db/bin.rs"

[[bench]]
name = "buf_vec_bench"
harness = false
